# triton-cpu

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
.github/scripts/: upstream_watch.py
.github/workflows/: upstream_watch.yml
csrc/: CMakeLists.txt  triton_shared.cc
csrc/bindings/: triton_anchor_passes.cc
csrc/include/triton-anchor/: RegisterTritonLinalgDialects.h
csrc/include/triton-anchor/Analysis/: AxisInfoAnalysis.h
csrc/include/triton-anchor/Conversion/: PassDetail.h  Passes.h
csrc/include/triton-anchor/Conversion/LinalgCommon/: Pattern.h
csrc/include/triton-anchor/Dialect/Auxiliary/IR/: AuxiliaryDialect.h
csrc/include/triton-anchor/Dialect/LinalgExt/IR/: LinalgExtInterface.h  LinalgExtOps.h
csrc/include/triton-anchor/Dialect/MathExt/IR/: MathExt.h
csrc/include/triton-anchor/Dialect/Triton/Interfaces/: InferAxisInfoInterface.h
csrc/include/triton-anchor/Dialect/Triton/Transforms/: PassDetail.h  Passes.h
csrc/include/triton-shared/Conversion/AddTargetDescription/: CMakeLists.txt
csrc/include/triton-shared/Conversion/TritonArithToLinalg/: ConversionPatterns.hpp  TritonArithToLinalg.h  TypeConverter.hpp
csrc/include/triton-shared/Conversion/TritonToLinalgExperimental/: Passes.h  ScfbufferStandardized.h
csrc/include/triton-shared/Dialect/TLE/IR/: TLEDialect.h  TLEDialect.td
csrc/include/triton-shared/Dialect/XSMT/IR/: XSMTDialect.h  XSMTOps.h  XSMTTypes.h
csrc/include/triton-shared/Dialect/XSMTAsync/IR/: XSMTAsync.td  XSMTAsyncOps.h  XSMTAsyncOps.td
csrc/include/triton-shared/Utils/: Utils.h
csrc/lib/Analysis/: AxisInfoAnalysis.cpp  MaskAnalysis.cpp
csrc/lib/AnalysisStructured/: PtrAnalysis.cpp
csrc/lib/Conversion/: CMakeLists.txt
csrc/lib/Conversion/AddTargetDescription/: CMakeLists.txt
csrc/lib/Conversion/ArithToLinalg/: ArithToLinalg.cpp
csrc/lib/Conversion/MathToLinalg/: MathToLinalg.cpp
csrc/lib/Conversion/StructuredToMemref/: StructuredToMemref.cpp
csrc/lib/Conversion/TritonArithToLinalg/: TritonArithToLinalgPass.cpp
csrc/lib/Conversion/TritonToLinalg/: AtomicCASConversion.cpp  AtomicRmwConversion.cpp  LoadStoreConversion.cpp  TritonPointerConversion.cpp  TritonToLinalg.cpp  TypeConverter.cpp  Utils.cpp
csrc/lib/Conversion/TritonToLinalgExperimental/: CollapseShape.cpp  ReconcileLlvmPtrCastsPass.cpp  ReconcilePtrCastsPass.cpp
csrc/lib/Conversion/XSMTToLinalg/: XSMTToLinalg.cpp
csrc/lib/Dialect/Auxiliary/IR/: AuxiliaryDialect.cpp
csrc/lib/Dialect/Auxiliary/Transforms/: AuxOpTilingInterface.cpp
csrc/lib/Dialect/LinalgExt/IR/: LinalgExtDialect.cpp  LinalgExtInterface.cpp  LinalgExtOps.cpp
csrc/lib/Dialect/LinalgExt/Transforms/: LinalgExtOpTilingInterface.cpp  TilingInterfaceImpl.cpp
csrc/lib/Dialect/LinalgExt/Utils/: Utils.cpp
csrc/lib/Dialect/MathExt/IR/: MathExtDialect.cpp  MathExtOps.cpp
csrc/lib/Dialect/Triton/Interfaces/: InferAxisInfoInterface.cpp
csrc/lib/Dialect/Triton/Transforms/: CanonicalizeTriton.cpp  ExtractMoveBackward.cpp  InferAxisInfoInterfaceImpl.cpp  PointerStrengthReduction.cpp  WrapFuncBodyWithSingleBlock.cpp
csrc/lib/Dialect/Triton/Utils/: MaskTracker.cpp  PointerMetaInfoTracker.cpp
csrc/lib/Dialect/Utils/: ArithUtils.cpp  Conventions.cpp  MemRefUtils.cpp  ShapeUtils.cpp
csrc/lib/Dialect/XSMT/: XSMTDialect.cpp  XSMTTypes.cpp
csrc/lib/Dialect/XSMTAsync/IR/: XSMTAsync.cc
csrc/lib/Pipelines/: CMakeLists.txt  Pipelines.cpp
csrc/lib/Utils/: Utils.cpp
csrc/tools/triton-shared-opt/: CMakeLists.txt
docs/: build.md  custom_backend.md
python/triton_anchor/: __init__.py  pipeline.py
python/triton_anchor/adapters/: base.py  triton_shared_adapter.py
scripts/: build_install_test.sh
tests/: test_ops.py  test_smoke.py
triton/: CMakeLists.txt  TRITON_VERSION  envsetup.sh  pyproject.toml  setup.py
triton/csrc/: CMakeLists.txt
triton/csrc/include/triton-shared/Dialect/TLE/IR/: TLEOps.h
triton/csrc/include/triton-shared/Dialect/XSMT/IR/: XSMTDialect.h  XSMTTypes.h
triton/csrc/tools/spine-triton-opt/: CMakeLists.txt
triton/include/triton/Dialect/Triton/IR/: TritonAttrDefs.td
triton/include/triton/Dialect/TritonNvidiaGPU/IR/: TritonNvidiaGPUDialect.td
triton/lib/Dialect/: CMakeLists.txt
triton/lib/Dialect/TritonGPU/IR/: CMakeLists.txt  Ops.cpp
triton/lib/Dialect/TritonGPU/Transforms/: CMakeLists.txt
triton/lib/Dialect/TritonGPU/Transforms/WarpSpecialization/: OptimizePartitionWarps.cpp
triton/lib/Dialect/TritonNvidiaGPU/Transforms/: CMakeLists.txt
triton/python/src/: gluon_ir.cc  ir.cc  ir.h  llvm.cc  passes.cc
triton/python/triton/compiler/: code_generator.py
triton/python/triton/language/: semantic.py  standard.py
triton/python/triton/language/extra/cpu/: libdevice.py  utils.py
triton/python/triton/language/extra/tle/: core.py
triton/python/triton/runtime/: interpreter.py
triton/python/triton_anchor/: __init__.py  anchor_ir.py  hw_capability.py  pipeline.py
triton/python/triton_anchor/adapters/: __init__.py  base.py  hybrid_adapter.py  registry.py  triton_linalg_adapter.py  triton_shared_adapter.py
triton/python/triton_anchor/extensions/: __init__.py  base.py  registry.py
triton/python/triton_anchor/language/: __init__.py
triton/python/triton_anchor/language/ext/: __init__.py
triton/python/triton_anchor/tests/: __init__.py  test_anchor_ir.py  test_hw_capability.py
triton/tests/: test_smoke.py
triton_anchor/adapters/: __init__.py  triton_linalg_adapter.py
upstream/python/src/: ir.cc
